# Skills_1

./: .replit  README.md  functions.py  lists.py  pyproject.toml  scantron.txt  test_functions.py
.github/classroom/: autograding.json
.github/workflows/: autograder.yaml  autograder.yml
tests/: conftest.py  test_functions.py  test_lists.py
