
[tool.poetry]
name = "Skills 1"
version = "0.1.0"
description = "Skills assessment for Unit 1."
authors = ["Hackbright Education <education@hackbrightacademy.com>"]

[tool.poetry.dependencies]
python = "3"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
